# justdontdie

./: .gitignore  .gitmodules  .travis.yml  .vimrc  CMakeLists.txt  LICENSE  Makefile  Makefile.config.template  Makefile.win  README.md  TODO.txt  _config.yml  about.md  code.md  deadgaem  justdontdie
_posts/: 2015-10-25-lets-get-started.markdown  2015-10-26-reset-and-map-making.markdown  2015-10-26-travis-ci.markdown  2015-11-06-making-maps.markdown
cmake/: toolchain-archlinux-x86_64-mingw32.cmake
flat/: .vimrc  Makefile  Makefile.win  README.md
flat-2d/: Makefile
flat-2d/include/flat-2d/: ObjectContainer.h
flat-2d/src/: CollisionDetector.cpp  CollisionDetector.h  GameObject.h  ObjectContainer.cpp  Timer.cpp  Timer.h
flat-2d/testsrc/: ButtonTest.cpp  CollisionDetectorTest.cpp  GameObjectImpl.cpp  GameObjectImpl.h  ObjectContainerTest.cpp
flat-2d/uisrc/: Button.cpp  Button.h
flat/include/flat/: ObjectContainer.h
flat/include/flat-2d/: Button.h
flat/src/: Button.cpp  Button.h  Camera.cpp  Camera.h  CollisionDetector.cpp  CollisionDetector.h  CollisionProperty.h  Database.cpp  Database.h  DeltatimeMonitor.cpp  DeltatimeMonitor.h  Entity.cpp  Entity.h  EntityContainer.cpp  EntityContainer.h  EntityProperties.cpp  EntityProperties.h  FlatBuilder.cpp  FlatBuilder.h  GameController.cpp  GameController.h  GameControllerContainer.cpp  GameControllerContainer.h  GameData.h  GameEngine.cpp  GameEngine.h  GameObject.h  LocationProperty.cpp  LocationProperty.h  MediaUtil.cpp  MediaUtil.h  Mixer.cpp  Mixer.h  NewMacro.h  ObjectContainer.cpp  ObjectContainer.h  RenderData.cpp  RenderData.h  RenderedGameObject.cpp  RenderedGameObject.h  (+5 more)
flat/testsrc/: ButtonTest.cpp  CollisionDetectorTest.cpp  EntityContainerTest.cpp  EntityImpl.h  EntityPropertiesTest.cpp  GameObjectImpl.cpp  GameObjectImpl.h  LocationProprtyTest.cpp  ObjectContainerTest.cpp
lib/: libBox2D.so.2.3.0
lib/Box2D/: Box2D-targets.cmake
resources/map1/: map1.tmx
resources/map2/: map2.tmx
resources/maps/map1/: map1.tmx
resources/maps/map2/: map2.tmx
resources/maps/rooms/: standard.txt
resources/maps/world1/: map1.tmx  map2.tmx  world1.tsx
src/: Block.cpp  Block.h  BloodParticle.cpp  BloodParticle.h  BoostParticle.cpp  BoostParticle.h  Bot.cpp  Bot.h  Camera.cpp  Camera.h  CollisionDetector.cpp  CompContainer.h  Config.h.in  CustomGameData.h  EntityType.h  FireParticle.cpp  FireParticle.h  FrameCounter.cpp  FrameCounter.h  GameObject.h  GameObjectType.h  GameSettings.h  GameStateController.cpp  GameStateController.h  GameStates.h  GenericGameObject.cpp  GenericGameObject.h  GhostOverlay.cpp  GhostOverlay.h  GhostParticle.cpp  GhostParticle.h  LayerService.cpp  LayerService.h  Layers.h  Macros.h  MapParser.cpp  MapParser.h  MapTileObject.cpp  MapTileObject.h  MoveUtil.cpp  (+46 more)
src/map/: Base64.cpp  Base64.h  EnemyGenerator.cpp  EnemyGenerator.h  EntityGenerator.h  MapGenerator.cpp  MapGenerator.h  MapParser.cpp  MapParser.h  MapTileObject.cpp  MapTileObject.h  OneShotEnemyGenerator.h  ProximityEnemyGenerator.cpp  ProximityEnemyGenerator.h  RocketGenerator.cpp  RocketGenerator.h  gzip.h
src/npcs/: AngryBot.cpp  AngryBot.h  Enemy.cpp  Enemy.h  Rocket.cpp  Rocket.h
src/npcs/ai/: Agent.h  NonFallingWalkingAgent.cpp  NonFallingWalkingAgent.h  WalkingAgent.cpp  WalkingAgent.h
testsrc/: CollisionDetectorTest.cpp  LayerServiceTest.cpp  ObjectContainerTest.cpp  TestSoldier.cpp  deadgaemtest.cpp  genericfixture.h  objectcontainertest.cpp  objectcontainertest.h
tools/maptodat/: .vimrc  CMakeLists.txt
tools/maptodat/src/: maptodat.cpp
